// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swipe renders normal Swipe correctly 1`] = `
<div
  class="ui-swipe"
>
  <div
    class="ui-swipe-items"
    style="white-space:nowrap"
  >
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.qq.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E9%BB%84%E6%B2%B9%E8%96%AF%E7%89%87-0.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.baidu.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E4%BD%B3%E4%B9%90%E9%94%AD.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.taobao.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E8%96%AF%E7%89%87-0.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.qq.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E9%BB%84%E6%B2%B9%E8%96%AF%E7%89%87-0.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.baidu.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E4%BD%B3%E4%B9%90%E9%94%AD.png"
          />
        </a>
      </div>
    </div>
  </div>
  <div
    class="ui-swipe-pagination"
  >
    <ul>
      <li
        class="active"
        style="display:inline-block;margin-right:3px"
      />
      <li
        class=""
        style="display:inline-block;margin-right:3px"
      />
      <li
        class=""
        style="display:inline-block;margin-right:3px"
      />
    </ul>
  </div>
</div>
`;

exports[`Swipe renders vertical Swipe correctly 1`] = `
<div
  class="ui-swipe"
>
  <div
    class="ui-swipe-items"
    style="height:160px"
  >
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.qq.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E9%BB%84%E6%B2%B9%E8%96%AF%E7%89%87-0.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.baidu.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E4%BD%B3%E4%B9%90%E9%94%AD.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.taobao.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E8%96%AF%E7%89%87-0.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.qq.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E9%BB%84%E6%B2%B9%E8%96%AF%E7%89%87-0.png"
          />
        </a>
      </div>
    </div>
    <div
      class="ui-swipe-item"
    >
      <div
        class="ui-swipe-pic"
      >
        <a
          href="http://www.baidu.com"
        >
          <img
            alt=""
            src="http://map.baidu.com/fwmap/upload/h5v1.2-%E9%A6%96%E9%A1%B5banner-%E4%BD%B3%E4%B9%90%E9%94%AD.png"
          />
        </a>
      </div>
    </div>
  </div>
  <div
    class="ui-swipe-pagination"
  >
    <ul>
      <li
        class="active"
        style="margin-top:3px"
      />
      <li
        class=""
        style="margin-top:3px"
      />
      <li
        class=""
        style="margin-top:3px"
      />
    </ul>
  </div>
</div>
`;
